--- a/api2/package.json
+++ b/api2/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql2": "^2.2.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
